Bug #1224 - browser bug: in IE, persistent search field has slight overlap

--- a/wp-content/themes/openlab/style.css
+++ b/wp-content/themes/openlab/style.css
@@ -7634,6 +7634,8 @@ body .align-left {
   padding: 8px 5%;
   width: 100%;
   font-weight: 600;
+  width: 100% !important;
+  /*have to do this for IE*/
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
